# krishaDashboard

./: Dashboard.py  krisha_arenda_data.xlsx  krisha_data.xlsx  main.py  parser.ipynb  pyproject.toml  requirements.txt
data/: Commercial_real_estate_rental.xlsx  Rent_of_apartments.xlsx  Rent_of_houses.xlsx  Sale_of_apartments.xlsx  Sale_of_business.xlsx  Sale_of_commercial_real_estate.xlsx  Sale_of_houses.xlsx  Sale_of_land.xlsx
pages/: 1_Data_parser.py
utils/: parser.py
