[tool.poetry]
name = "krishadashboard"
version = "0.1.0"
description = ""
authors = ["madi <mad.kabakov.pg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.40.2"
matplotlib = "^3.9.3"
openpyxl = "^3.1.5"
dash = "^2.18.2"
plotly = "^5.24.1"
scikit-learn = "^1.5.2"
geopandas = "^1.0.1"
statsmodels = "^0.14.4"
folium = "^0.18.0"
streamlit-folium = "^0.23.2"
branca = "^0.8.0"
bs4 = "^0.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
